Initial commit [Youtube Checkpoint]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# Koneksi Database
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_shoppinglist
+spring.datasource.username=jedediah
+spring.datasource.password=11223344
+# server.port=8081
