--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/db_shoppinglist
 spring.datasource.username=jedediah
 spring.datasource.password=11223344
 # server.port=8081
+#spring.jpa.show-sql=true
