Update Application Properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Koneksi Database
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_shoppinglist
-spring.datasource.username=jedediah
-spring.datasource.password=11223344
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbshoppinglist
+spring.datasource.username=postgres
+spring.datasource.password=
 # server.port=8081
 #spring.jpa.show-sql=true
